force-app/main/default/objects/CaseRecordType__c/CaseRecordType__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Case Record Types</label>
</CustomObject>