force-app/main/default/objects/CaseRecordType__c/fields/After_Sales_Services__c.field-meta.xml
<CustomField>
    <fullName>After_Sales_Services__c</fullName>
    <label>After-Sales Services</label>
    <length>18</length>
    <type>Text</type>
</CustomField>