force-app/main/default/objects/CaseRecordType__c/fields/Back_Market_Services__c.field-meta.xml
<CustomField>
    <fullName>Back_Market_Services__c</fullName>
    <label>Back Market Services</label>
    <length>18</length>
    <type>Text</type>
</CustomField>