force-app/main/default/objects/CaseRecordType__c/fields/Back_Office_Integrators_Technic__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Integrators_Technic__c</fullName>
    <label>Back Office Integrators Technic</label>
    <length>18</length>
    <type>Text</type>
</CustomField>