force-app/main/default/objects/CaseRecordType__c/fields/BackWatch_Merchant_contact__c.field-meta.xml
<CustomField>
    <fullName>BackWatch_Merchant_contact__c</fullName>
    <label>BackWatch - Merchant contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>