force-app/main/default/objects/CaseRecordType__c/fields/Billing_Invoicing_and_Fees__c.field-meta.xml
<CustomField>
    <fullName>Billing_Invoicing_and_Fees__c</fullName>
    <label>Billing Invoicing and Fees</label>
    <length>18</length>
    <type>Text</type>
</CustomField>