force-app/main/default/objects/CaseRecordType__c/fields/BuyBack_Bill_Process__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Bill_Process__c</fullName>
    <label>BuyBack Bill Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>