force-app/main/default/objects/CaseRecordType__c/fields/BuyBack_Bill_Process_V2__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Bill_Process_V2__c</fullName>
    <label>BuyBack Bill Process V2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>