force-app/main/default/objects/CaseRecordType__c/fields/Buyback_only_available_for_EU_sellers__c.field-meta.xml
<CustomField>
    <fullName>Buyback_only_available_for_EU_sellers__c</fullName>
    <label>Buyback (only available for EU sellers)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>