force-app/main/default/objects/CaseRecordType__c/fields/BuyBack_Test__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Test__c</fullName>
    <label>BuyBack Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>