force-app/main/default/objects/CaseRecordType__c/fields/Customer_Support_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Case__c</fullName>
    <label>Customer Support Case</label>
    <length>18</length>
    <type>Text</type>
</CustomField>