force-app/main/default/objects/CaseRecordType__c/fields/Finance_and_Legal__c.field-meta.xml
<CustomField>
    <fullName>Finance_and_Legal__c</fullName>
    <label>Finance and Legal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>