force-app/main/default/objects/CaseRecordType__c/fields/Generic_Case__c.field-meta.xml
<CustomField>
    <fullName>Generic_Case__c</fullName>
    <label>Generic Case</label>
    <length>18</length>
    <type>Text</type>
</CustomField>