force-app/main/default/objects/CaseRecordType__c/fields/Language_Test__c.field-meta.xml
<CustomField>
    <fullName>Language_Test__c</fullName>
    <label>Language Test</label>
    <length>18</length>
    <type>Text</type>
</CustomField>