force-app/main/default/objects/CaseRecordType__c/fields/Merchant_Refund__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Refund__c</fullName>
    <label>Merchant Refund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>