force-app/main/default/objects/CaseRecordType__c/fields/Quality_and_Sales_Performance__c.field-meta.xml
<CustomField>
    <fullName>Quality_and_Sales_Performance__c</fullName>
    <label>Quality and Sales Performance</label>
    <length>18</length>
    <type>Text</type>
</CustomField>