force-app/main/default/objects/CaseRecordType__c/fields/Quality_Support_Cases__c.field-meta.xml
<CustomField>
    <fullName>Quality_Support_Cases__c</fullName>
    <label>Quality Support Cases</label>
    <length>18</length>
    <type>Text</type>
</CustomField>