force-app/main/default/objects/CaseRecordType__c/fields/Quality_Test__c.field-meta.xml
<CustomField>
    <fullName>Quality_Test__c</fullName>
    <label>Quality Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>