force-app/main/default/objects/CaseRecordType__c/fields/Quality_Test_US__c.field-meta.xml
<CustomField>
    <fullName>Quality_Test_US__c</fullName>
    <label>Quality Test US</label>
    <length>255</length>
    <type>Text</type>
</CustomField>