force-app/main/default/objects/CaseRecordType__c/fields/Seller_Support_Case__c.field-meta.xml
<CustomField>
    <fullName>Seller_Support_Case__c</fullName>
    <label>Seller Support Case</label>
    <length>18</length>
    <type>Text</type>
</CustomField>